Fixing sidebar links
Fixed sidebar links to work correctly

--- a/materials.html
+++ b/materials.html
@@ -14,9 +14,9 @@
     <div class="wrapper">
         <div class="sidebar">
             <h3 class="bar-item">Menu</h3>
-            <a href="/materials.html#Monday_Thursday" class="bar-item button">Monday/Thursday</a>
-            <a href="/materials.html#Tuesday_Friday" class="bar-item button">Tuesday/Friday</a>
-            <a href="/materials.html#Wednesday_Saturday" class="bar-item button">Wednesday/Saturday</a>
+            <a href="materials.html#Monday_Thursday" class="bar-item button">Monday/Thursday</a>
+            <a href="materials.html#Tuesday_Friday" class="bar-item button">Tuesday/Friday</a>
+            <a href="materials.html#Wednesday_Saturday" class="bar-item button">Wednesday/Saturday</a>
         </div>
     
 
