--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <h1>About</h1>
-                <p>This project was developed to showcase and refine my web development skills. It serves as a responsive web page designed to provide a clear and easily accessible list of farming character materials.</p>
+                <p>This project was developed to showcase and refine my web development skills. It serves as a responsive web page designed to provide a clear and easily accessible list of farming character's book materials.</p>
 
                 <hr>
                 <footer>
