Fixing index links
Fixed href links from the index file

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <h1>Genshin Impact Drops</h1>
                 <p>Character materials per day:</p>
                 <ul>
-                    <li><a href="/materials.html#Monday_Thursday">Monday/Thursday</a></li>
-                    <li><a href="/materials.html#Tuesday_Friday">Tuesday/Friday</a></li>
-                    <li><a href="/materials.html#Wednesday_Saturday">Wednesday/Saturday</a></li>
+                    <li><a href="materials.html#Monday_Thursday">Monday/Thursday</a></li>
+                    <li><a href="materials.html#Tuesday_Friday">Tuesday/Friday</a></li>
+                    <li><a href="materials.html#Wednesday_Saturday">Wednesday/Saturday</a></li>
                 </ul>
         
                 <hr>
