Open Graph meta tags
Added Open Graph meta tags to index, materials and about pages

--- a/materials.html
+++ b/materials.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Genshin Impact Character Drops"/>
+    <meta property="og:description" content="A list of farming character's book materials" />
+    <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner2.png" />
+    <meta property="og:url" content="https://jakkgj.github.io/genshin/" />
+
     <title>Character Materials</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
