Open Grapgh Img Test
Testing to see if Open Graph Img finally loads

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Genshin Impact Character Drops"/>
     <meta property="og:description" content="A list of farming character's book materials" />
-    <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner2.png" />
+    <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner2.png" />
     <meta property="og:url" content="https://jakkgj.github.io/genshin/" />
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
