--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Genshin Impact Character Drops"/>
     <meta property="og:description" content="A list of farming character's book materials" />
     <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner2.png" />
+    <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner2.png" />
+    <meta property="og:image:type" content="image/png" /> 
+    <meta property="og:image:width" content="400" /> 
+    <meta property="og:image:height" content="300" /> 
     <meta property="og:url" content="https://jakkgj.github.io/genshin/" />
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
