--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:image:type" content="image/png" /> 
     <meta property="og:image:width" content="400" /> 
     <meta property="og:image:height" content="300" /> 
+    <meta property="og:type" content="website">
     <meta property="og:url" content="https://jakkgj.github.io/genshin/" />
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
