--- a/about.html
+++ b/about.html
@@ -6,12 +6,11 @@
 
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Genshin Impact Character Drops"/>
-    <meta property="og:description" content="A list of farming character's book materials" />
-    <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner2.png" />
-    <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner2.png" />
-    <meta property="og:image:type" content="image/png" /> 
-    <meta property="og:image:width" content="400" /> 
-    <meta property="og:image:height" content="300" /> 
+    <meta property="og:description" content="A list for farming book materials for characters" />
+    <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner.jpg" />
+    <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner.jpg" />
+    <meta property="og:image:width" content="1200" /> 
+    <meta property="og:image:height" content="630" /> 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jakkgj.github.io/genshin/" />
 
@@ -44,7 +43,7 @@
                 </div>
 
                 <h1>About</h1>
-                <p>This project was developed to showcase and refine my web development skills. It serves as a responsive web page designed to provide a clear and easily accessible list of farming character's book materials.</p>
+                <p>This project was developed to showcase and refine my web development skills. It serves as a responsive web page designed to provide a clear and easily accessible list of farming book materials for characters.</p>
 
                 <hr>
                 <footer>
