--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Genshin Impact Character Drops"/>
-    <meta property="og:description" content="A list of farming character's book materials" />
-    <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner.jpeg" />
-    <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner.jpeg" />
-    <meta property="og:image:type" content="image/jpeg" /> 
+    <meta property="og:description" content="A list for farming book materials for characters" />
+    <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner.jpg" />
+    <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner.jpg" />
     <meta property="og:image:width" content="1200" /> 
     <meta property="og:image:height" content="630" /> 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jakkgj.github.io/genshin/" />
-
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script src="main.js"></script>
