Updated for Genshin v5.6
Updated for Genshin v5.6
- Added Escoffier and Ifa
- Updated YT video

--- a/materials.html
+++ b/materials.html
@@ -208,6 +208,7 @@
                             </li>
                             <li><img src="img/charlotte.png" alt="Charlotte" width="20" height="20"> Charlotte</li>
                             <li><img src="img/clorinde.png" alt="Clorinde" width="20" height="20"> Clorinde</li>
+                            <li><img src="img/escoffier.png" alt="Escoffier" width="20" height="20"> Escoffier</li>
                             <li><img src="img/freminet.png" alt="Freminet" width="20" height="20"> Freminet</li>
                             <li><img src="img/furina.png" alt="Furina" width="20" height="20"> Furina</li>
                         </ul>
@@ -296,6 +297,7 @@
                             <li><img src="img/travelerpyro.png" alt="Traveler (Pyro)" width="20" height="20"> Traveler (Pyro)
                             </li>
                             <li><img src="img/chasca.png" alt="Chasca" width="20" height="20"> Chasca</li>
+                            <li><img src="img/ifa.png" alt="Ifa" width="20" height="20"> Ifa</li>
                             <li><img src="img/kachina.png" alt="Kachina" width="20" height="20"> Kachina</li>
                             <li><img src="img/varesa.png" alt="Varesa" width="20" height="20"> Varesa</li>
                         </ul>
@@ -313,7 +315,7 @@
             </div>
             <div class="media">
                 <iframe width="300" height="315" 
-                    src="https://www.youtube.com/embed/vgdhWQ5aL0s?si=44xZ3BCpgbY11-67" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                    src="https://www.youtube.com/embed/1yMiRtdOVmM?si=XJ_mJaxe7fYZzcfZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
                 <div class="feed">
                     <a class="twitter-timeline" data-width="300" data-height="315" data-theme="dark" href="https://twitter.com/GenshinImpact?ref_src=twsrc%5Etfw">Tweets by GenshinImpact</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
