Updating banner for 5.6 phase 1
* Updated banner for 5.6 phase 1
* Renamed old banners

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
         <div class="container">
             <div class="main">
-                <img src="img/banner2.png" alt="Banner Image" class="banner-img">
+                <img src="img/banner.png" alt="Banner Image" class="banner-img">
 
                 <div class="navbar">
                     <ul>
