--- a/materials.html
+++ b/materials.html
@@ -35,7 +35,7 @@
             <div class="main">
     
                 <!-- <div class="banner"> -->
-                    <img src="img/banner2.png" alt="Banner Image" class="banner-img">
+                    <img src="img/banner.png" alt="Banner Image" class="banner-img">
                 <!-- </div> -->
             
                 <div class="navbar">
