--- a/materials.html
+++ b/materials.html
@@ -8,8 +8,8 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Genshin Impact Character Drops"/>
     <meta property="og:description" content="A list for farming book materials for characters" />
-    <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner2.jpg" />
-    <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner2.jpg" />
+    <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner2.png" />
+    <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner2.png" />
     <!--
     <meta property="og:image:width" content="1200" /> 
     <meta property="og:image:height" content="630" />
