--- a/about.html
+++ b/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Genshin Impact Character Drops"/>
+    <meta property="og:title" content="Genshin Impact Character Drops" />
     <meta property="og:description" content="A list for farming book materials for characters" />
     <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner_preview.jpg" />
     <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner_preview.jpg" />
@@ -21,6 +22,7 @@
     <script src="main.js"></script>
     <title>About</title>
 </head>
+
 <body>
     <div class="wrapper">
 
@@ -45,7 +47,9 @@
                 </div>
 
                 <h1>About</h1>
-                <p>This project was developed to showcase and refine my web development skills. It serves as a responsive web page designed to provide a clear and easily accessible list of farming book materials for characters.</p>
+                <p>This project was developed to showcase and refine my web development skills. It serves as a
+                    responsive web page designed to provide a clear and easily accessible list of farming book materials
+                    for characters.</p>
 
                 <hr>
                 <footer>
@@ -55,15 +59,20 @@
             </div>
 
             <div class="media">
-                <iframe width="300" height="315" 
-                        src="https://www.youtube.com/embed/1yMiRtdOVmM?si=XJ_mJaxe7fYZzcfZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                <iframe width="300" height="315" src="https://www.youtube.com/embed/1yMiRtdOVmM?si=XJ_mJaxe7fYZzcfZ"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
                 <div class="feed">
-                    <a class="twitter-timeline" data-width="300" data-height="315" data-theme="dark" href="https://twitter.com/GenshinImpact?ref_src=twsrc%5Etfw">Tweets by GenshinImpact</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <a class="twitter-timeline" data-width="300" data-height="315" data-theme="dark"
+                        href="https://twitter.com/GenshinImpact?ref_src=twsrc%5Etfw">Tweets by GenshinImpact</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
 
         </div>
     </div>
 </body>
+
 </html>
