--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Genshin Impact Character Drops" />
     <meta property="og:description" content="A list for farming book materials for characters" />
-    <meta property="og:image" content="https://jakkgj.github.io/genshin/img/banner_preview.jpg" />
-    <meta property="og:image:secure_url" content="https://jakkgj.github.io/genshin/img/banner_preview.jpg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg" />
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg" />
     <!--
     <meta property="og:image:width" content="1200" /> 
     <meta property="og:image:height" content="630" />
