--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Genshin Impact Character Drops" />
-    <meta property="og:description" content="A list for farming book materials for characters" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg" />
-    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg" />
+    <meta property="og:title" content="Genshin Impact Character Drops">
+    <meta property="og:description" content="A list for farming book materials for characters">
+    <meta property="og:image" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg">
     <!--
     <meta property="og:image:width" content="1200" /> 
     <meta property="og:image:height" content="630" />
     -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jakkgj.github.io/genshin/" />
+    <meta property="og:url" content="https://jakkgj.github.io/genshin/">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script src="main.js"></script>
@@ -41,7 +41,7 @@
 
                 <div class="navbar">
                     <ul>
-                        <li><a class="active" href="index.html">Home</a></li2>
+                        <li><a class="active" href="index.html">Home</a></li>
                         <li><a href="materials.html">Materials</a></li>
                         <li><a href="about.html">About</a></li>
                     </ul>
@@ -63,14 +63,14 @@
 
             <div class="media">
                 <iframe width="300" height="315" src="https://www.youtube.com/embed/1yMiRtdOVmM?si=XJ_mJaxe7fYZzcfZ"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
                 <div class="feed">
                     <a class="twitter-timeline" data-width="300" data-height="315" data-theme="dark"
                         href="https://twitter.com/GenshinImpact?ref_src=twsrc%5Etfw">Tweets by GenshinImpact</a>
-                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <script async src="https://platform.twitter.com/widgets.js"></script>
                 </div>
             </div>
         </div>
