--- a/materials.html
+++ b/materials.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Genshin Impact Character Drops" />
-    <meta property="og:description" content="A list for farming book materials for characters" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg" />
-    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg" />
+    <meta property="og:title" content="Genshin Impact Character Drops">
+    <meta property="og:description" content="A list for farming book materials for characters">
+    <meta property="og:image" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/JakkGJ/genshin/refs/heads/main/img/banner_preview.jpg">
     <!--
     <meta property="og:image:width" content="1200" /> 
     <meta property="og:image:height" content="630" />
     -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jakkgj.github.io/genshin/" />
+    <meta property="og:url" content="https://jakkgj.github.io/genshin/">
 
     <title>Character Materials</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -41,7 +41,7 @@
 
                 <div class="navbar">
                     <ul>
-                        <li><a href="index.html">Home</a></li2>
+                        <li><a href="index.html">Home</a></li>
                         <li><a class="active" href="materials.html">Materials</a></li>
                         <li><a href="about.html">About</a></li>
                     </ul>
@@ -70,8 +70,8 @@
                                 <li><img src="img/tartaglia.png" alt="Tartaglia" width="20" height="20"> Tartaglia</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Prosperity Books (Liyue - Taishan Mansion)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -88,8 +88,8 @@
                                 <li><img src="img/yelan.png" alt="Yelan" width="20" height="20"> Yelan</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Transience Books (Inazuma - Violet Court)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -105,8 +105,8 @@
                                 <li><img src="img/mizuki.png" alt="Mizuki" width="20" height="20"> Mizuki</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Admonition Books (Sumeru - Steeple of Ignorance)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -120,8 +120,8 @@
                                 <li><img src="img/tighnari.png" alt="Tighnari" width="20" height="20"> Tighnari</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Equity Books (Fontaine - Forgotten Glory)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -136,8 +136,8 @@
                                 <li><img src="img/sigewinne.png" alt="Sigewinne" width="20" height="20"> Sigewinne</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Contention Books (Natlan - Blazing Ruins)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -173,8 +173,8 @@
                                 <li><img src="img/razor.png" alt="Razor" width="20" height="20"> Razor</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Diligence Books (Liyue - Taishan Mansion)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -191,8 +191,8 @@
                                 <li><img src="img/yunjin.png" alt="Yun Jin" width="20" height="20"> Yun Jin</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Elegance Books (Inazuma - Violet Court)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -207,8 +207,8 @@
                                 <li><img src="img/shinobu.png" alt="Shinobu" width="20" height="20"> Shinobu</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Ingenuity Books (Sumeru - Steeple of Ignorance)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -223,8 +223,8 @@
                                 <li><img src="img/nahida.png" alt="Nahida" width="20" height="20"> Nahida</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Justice Books (Fontaine - Forgotten Glory)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -240,8 +240,8 @@
                                 <li><img src="img/furina.png" alt="Furina" width="20" height="20"> Furina</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Kindling Books (Natlan - Blazing Ruins)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -280,8 +280,8 @@
                                 <li><img src="img/venti.png" alt="Venti" width="20" height="20"> Venti</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Gold Books (Liyue - Taishan Mansion)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -297,8 +297,8 @@
                                 <li><img src="img/zhongli.png" alt="Zhongli" width="20" height="20"> Zhongli</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Light Books (Inazuma - Violet Court)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -313,8 +313,8 @@
                                 <li><img src="img/yaemiko.png" alt="Yae Miko" width="20" height="20"> Yae Miko</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Praxis Books (Sumeru - Steeple of Ignorance)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -329,8 +329,8 @@
                                 <li><img src="img/wanderer.png" alt="Wanderer" width="20" height="20"> Wanderer</li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Order Books (Fontaine - Forgotten Glory)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -348,8 +348,8 @@
                                 </li>
                             </ul>
                         </details>
+                        <br>
                     </li>
-                    <br>
                     <li>Conflict Books (Natlan - Blazing Ruins)
                         <details open>
                             <summary class="summary">Click to collapse</summary>
@@ -378,14 +378,14 @@
             </div>
             <div class="media">
                 <iframe width="300" height="315" src="https://www.youtube.com/embed/1yMiRtdOVmM?si=XJ_mJaxe7fYZzcfZ"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
                 <div class="feed">
                     <a class="twitter-timeline" data-width="300" data-height="315" data-theme="dark"
                         href="https://twitter.com/GenshinImpact?ref_src=twsrc%5Etfw">Tweets by GenshinImpact</a>
-                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <script async src="https://platform.twitter.com/widgets.js"></script>
                 </div>
             </div>
         </div>
