Updated with Skirk Teaser
* Updated Skirk teaser embedded video.
* Added more info on the footer.
* Added smooth scrolling.

--- a/about.html
+++ b/about.html
@@ -54,12 +54,13 @@
                 <hr>
                 <footer>
                     <p>Copyright &COPY; Jack González</p>
+                    <p>Genshin Impact, game content and materials are trademarks and copyrights of HoYoverse.</p>
                 </footer>
 
             </div>
 
             <div class="media">
-                <iframe width="300" height="315" src="https://www.youtube.com/embed/1yMiRtdOVmM?si=XJ_mJaxe7fYZzcfZ"
+                <iframe width="300" height="315" src="https://www.youtube.com/embed/injdhkGRoCs?si=EJFG2kvSnTBw9BR2"
                     title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
