Added Skirk and Dahlia
Added Skirk and Dahlia

--- a/materials.html
+++ b/materials.html
@@ -148,6 +148,7 @@
                                 <li><img src="img/iansan.png" alt="Iansan" width="20" height="20"> Iansan</li>
                                 <li><img src="img/mavuika.png" alt="Mavuika" width="20" height="20"> Mavuika</li>
                                 <li><img src="img/mualani.png" alt="Mualuni" width="20" height="20"> Mualuni</li>
+                                <li><img src="img/skirk.png" alt="Skirk" width="20" height="20"> Skirk</li>
                             </ul>
                         </details>
                     </li>
@@ -272,6 +273,7 @@
                                 <li><img src="img/travelergeo.png" alt="Traveler (Geo)" width="20" height="20"> Traveler
                                     (Geo)</li>
                                 <li><img src="img/albedo.png" alt="Albedo" width="20" height="20"> Albedo</li>
+                                <li><img src="img/dahlia.png" alt="Dahlia" width="20" height="20"> Dahlia</li>
                                 <li><img src="img/fischl.png" alt="Fischl" width="20" height="20"> Fischl</li>
                                 <li><img src="img/kaeya.png" alt="Kaeya" width="20" height="20"> Kaeya</li>
                                 <li><img src="img/lisa.png" alt="Lisa" width="20" height="20"> Lisa</li>
